Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126143

QMediaFormat on Linux does not show MP3

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.5.7, 6.7.3, 6.8.0 Beta2
    • 6.7.1
    • Multimedia
    • None
    • Linux/Wayland
    • a84ce3af6 (dev), 32cf92701 (6.8), 9343c2e15 (6.7), 0c0d1feca (tqtc/lts-6.5), 81127101f (dev), 873604820 (dev), f1c7ce65e (6.8), dc1c2dfd9 (6.8), 0ac0e911c (6.7), 0f60fcaf0 (6.7), 3fd22358f (tqtc/lts-6.5), 5fc8c0aae (tqtc/lts-6.5)
    • Multimedia wk 27-28, Multimedia wk 29-30

      Running 

          for f in QMediaFormat().supportedFileFormats(QMediaFormat.Decode):
              mime_type = QMediaFormat(f).mimeType()
              mime_types.append(mime_type.name())
              print(mime_type.suffixes())

      does not output a record for MP3 formats.

      If passed directly to #QmediaPlayer the MP3 file will play successfully. 

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mikko.hallamaa Mikko Hallamaa
            trb143a Tim Bentley
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: