GStreamer: Check elements other than (de)muxers for codec maps

GStreamer integration checked only muxer and demuxer elements when
constructing codec maps of supported formats. This wouldn't include
formats like MP3 audio on decoding side (where the pipeline would
consist of a parser and a decoder) or FLAC on the encoding side (where
there's only an encoder).

This patch adds more factory types to codec map creation in order to
include more supported file formats that don't necessarily have a
(de)muxer in the pipeline.

Task-number: QTBUG-126143
Pick-to: 6.5
Change-Id: I9e925bbfa0ba0c00c172159d3cebaaa4ca69a962
Reviewed-by: Tim Blechmann <tim.blechmann@qt.io>
Reviewed-by: Lars Sutterud <lars.sutterud@qt.io>
(cherry picked from commit 873604820cf3762c2b6c1807720b82fa2f83b235)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit dc1c2dfd9d79307ba41f2027fefdba78bbcd6e74)